# ark-gb

./: Cargo.toml  README.md  bench-baseline.sh
benches/: groebner.rs  groebner_shared.rs  matrix.rs
docs/: design-decisions.md
examples/: compute_gb.rs  gm_bench.rs  kbucket_bench.rs  mul_probe.rs  perf_cyclic5.rs  sanity.rs  timing_grevlex.rs
src/: bba.rs  bset.rs  computation.rs  f4.rs  field.rs  gm.rs  kbucket.rs  lib.rs  lobject.rs  lset.rs  monomial.rs  ordering.rs  pair.rs  parallel.rs  reducer.rs  ring.rs  sbasis.rs  validate.rs
src/matrix/: gauss.rs  mod.rs  sparse.rs
src/poly/: mod.rs  node_pool.rs  poly_list.rs  poly_vec.rs
tests/: bba_fixtures.rs  bba_props.rs  cancel.rs  elim_order.rs  field_props.rs  field_smoke.rs  gb_sanity.rs  gm_props.rs  groebner_correctness.rs  groebner_sage.rs  kbucket_props.rs  lset_props.rs  monomial_props.rs  poly_props.rs  sbasis_props.rs  w16_smoke.rs  w8_smoke.rs
